switched code formatter to eclipse built-in
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@27450 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e